--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,4 +1,3 @@
-@if (selectedRecipe) {
 <div class="row">
   <div class="col-xs-12">
     <img
@@ -22,10 +21,12 @@
       </button>
       <ul class="dropdown-menu">
         <li>
-          <a href="#" (click)="onAddToShoppingList()">To Shopping List</a>
+          <a role="button" (click)="onAddToShoppingList()">
+            To Shopping List
+          </a>
         </li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+        <li><a role="button">Edit Recipe</a></li>
+        <li><a role="button">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
@@ -46,7 +47,3 @@
     </ul>
   </div>
 </div>
-
-} @else {
-<p>Please select a recipe</p>
-}
